--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,10 @@
 <html>  
     <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="Kasinah Latumanuwy">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Home • Boooth</title>
         <link href="nav.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head> 
